[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sheet_metal_mfg"
version = "1.0.0"
description = "Sheet Metal WIP & Production Lot Management for ERPNext V16"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
